--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -17437,7 +17437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -17446,7 +17446,7 @@
        "\n",
        "        <iframe\n",
        "            width=\"100%\"\n",
-       "            height=\"650\"\n",
+       "            height=\"1000\"\n",
        "            src=\"http://127.0.0.1:8050/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -17455,7 +17455,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2b821ed0d10>"
+       "<IPython.lib.display.IFrame at 0x2699e22b9e0>"
       ]
      },
      "metadata": {},
