Add individual pcas

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -17437,7 +17437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -17446,7 +17446,7 @@
        "\n",
        "        <iframe\n",
        "            width=\"100%\"\n",
-       "            height=\"1000\"\n",
+       "            height=\"1500\"\n",
        "            src=\"http://127.0.0.1:8050/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -17455,7 +17455,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2699e22b9e0>"
+       "<IPython.lib.display.IFrame at 0x269a0298c80>"
       ]
      },
      "metadata": {},
