--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -430,27 +430,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Projects\\Thesis\\.venv\\Lib\\site-packages\\IPython\\extensions\\storemagic.py:229: UserWarning: This is now an optional IPython functionality, setting autorestore/settings requires you to install the `pickleshare` library.\n",
-      "  db[ 'autorestore/' + arg ] = obj\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'settings' (Settings)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "settings = Settings()\n",
-    "\n",
-    "%store settings"
+    "settings = Settings()"
    ]
   },
   {
@@ -17550,29 +17532,29 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.20031852336174144,
-          0.1903765043180476,
-          0.18988671921405217,
-          0.18836150086251302,
-          0.1868482283217795,
-          0.18589131993652555,
-          0.17782688664877866,
-          0.17496742758093023,
-          0.17366539783506463,
-          0.17306187170362716
+          0.19750588287838888,
+          0.18780084914180967,
+          0.18584566777814693,
+          0.1852073304956445,
+          0.18314494041822585,
+          0.182958251808943,
+          0.17443498636760718,
+          0.17323461785173774,
+          0.1716892733798062,
+          0.16913123773170266
          ],
          "xaxis": "x",
          "y": [
           "of",
           "yules_characteristic_k",
-          "flesch_reading_ease",
           "simpsons_index",
+          "flesch_reading_ease",
           "average_syllables_per_word",
           "the",
           "average_word_length",
           "he",
           "said",
-          "gunning_fog_index"
+          "at"
          ],
          "yaxis": "y"
         },
@@ -17584,29 +17566,29 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.23248760268474505,
-          0.211138635763523,
-          0.20469502376825768,
-          0.2016603061191723,
-          0.19847783790886506,
-          0.19391055321236672,
-          0.1852936021567074,
-          0.18007690738708698,
-          0.17740341837813356,
-          0.1770145726352368
+          0.23684887662391935,
+          0.21139201503290658,
+          0.2029108195283909,
+          0.2016532940116579,
+          0.20079835793346085,
+          0.19275737319064204,
+          0.18355471944788326,
+          0.18320759836174633,
+          0.18151133357523708,
+          0.17680803557078367
          ],
          "xaxis": "x2",
          "y": [
           "average_sentence_length",
           "that",
-          "have",
           "to",
+          "have",
           ".",
           "a",
-          "so",
-          "with",
           "gunning_fog_index",
-          "flesch_kincaid_grade_level"
+          "flesch_kincaid_grade_level",
+          "so",
+          "and"
          ],
          "yaxis": "y2"
         }
@@ -18467,8 +18449,8 @@
           0.375
          ],
          "range": [
-          0.17306187170362716,
-          0.20031852336174144
+          0.16913123773170266,
+          0.19750588287838888
          ],
          "title": {
           "text": "Importance"
@@ -18481,8 +18463,8 @@
           1
          ],
          "range": [
-          0.1770145726352368,
-          0.23248760268474505
+          0.17680803557078367,
+          0.23684887662391935
          ]
         },
         "yaxis": {
@@ -18535,7 +18517,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x14b84a2a900>"
+       "<IPython.lib.display.IFrame at 0x1fca0194650>"
       ]
      },
      "metadata": {},
@@ -18559,7 +18541,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dill.dump_session('res/sessions/analysis.db')"
+    "import os\n",
+    "\n",
+    "dump_session_filepath = 'res/sessions/analysis.db'\n",
+    "if os.path.exists(dump_session_filepath):\n",
+    "    os.remove(dump_session_filepath)\n",
+    "dill.dump_session(dump_session_filepath)"
    ]
   }
  ],
