Include load_session

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,16 +423,36 @@
     "from src import *\n",
     "import dill\n",
     "import nltk\n",
+    "import os\n",
     "nltk.download('all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "settings = Settings()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Either run the notebook or load the session from the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_session = True\n",
+    "dump_session_filepath = 'res/sessions/analysis.db'\n",
+    "if load_session:\n",
+    "    dill.load_session(dump_session_filepath)"
    ]
   },
   {
@@ -18541,12 +18561,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "dump_session_filepath = 'res/sessions/analysis.db'\n",
-    "if os.path.exists(dump_session_filepath):\n",
-    "    os.remove(dump_session_filepath)\n",
-    "dill.dump_session(dump_session_filepath)"
+    "if not load_session:\n",
+    "    if os.path.exists(dump_session_filepath):\n",
+    "        os.remove(dump_session_filepath)\n",
+    "    dill.dump_session(dump_session_filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MetricsAnalysisVisualization' object has no attribute '_vv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mMetricsAnalysisVisualization\u001b[49m\u001b[43m(\u001b[49m\u001b[43msettings\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_vv\u001b[49m(pca_analysis_results\u001b[38;5;241m=\u001b[39mpca_analysis_results)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'MetricsAnalysisVisualization' object has no attribute '_vv'"
+     ]
+    }
+   ],
+   "source": [
+    "MetricsAnalysisVisualization(settings)._vv(pca_analysis_results=pca_analysis_results)"
    ]
   }
  ],
