--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -17487,9 +17487,17 @@
     }
    ],
    "source": [
-    "MetricsAnalysisVisualization(settings).visualize(\n",
-    "    metrics_analysis_results=metrics_analysis_results\n",
-    ")"
+    "metrics_analysis_visualization =  MetricsAnalysisVisualization(settings=settings, metrics_analysis_results=metrics_analysis_results)\n",
+    "metrics_analysis_visualization.visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics_analysis_visualization.dash_app.run(port=8001)"
    ]
   },
   {
@@ -17507,7 +17515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -17534,7 +17542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -17548,33 +17556,33 @@
          "marker": {
           "color": "skyblue"
          },
-         "name": "Top Features for PC1[0.18]",
+         "name": "Top Features for PC1[0.17]",
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.19615806466238006,
-          0.1864106507442764,
-          0.18444965866719615,
-          0.18289963206082424,
-          0.18178643494837685,
-          0.1815394161598726,
-          0.17352518105176612,
-          0.17273398009526167,
-          0.17076804633992773,
-          0.1690099053055776
+          0.20026590111272238,
+          0.1903362045225643,
+          0.1898695409518489,
+          0.18832112045145674,
+          0.1868133841571334,
+          0.18586446482310448,
+          0.17780188018376136,
+          0.17494083395038051,
+          0.17359817169277258,
+          0.1730579319711414
          ],
          "xaxis": "x",
          "y": [
           "of",
           "yules_characteristic_k",
-          "simpsons_index",
           "flesch_reading_ease",
+          "simpsons_index",
           "average_syllables_per_word",
           "the",
           "average_word_length",
           "he",
           "said",
-          "at"
+          "gunning_fog_index"
          ],
          "yaxis": "y"
         },
@@ -17586,16 +17594,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.2378133704888014,
-          0.2111770239585814,
-          0.20198824877504865,
-          0.20044648127256068,
-          0.1989110131069104,
-          0.1873386442521883,
-          0.18649250235915868,
-          0.18610241173442227,
-          0.1766682386982306,
-          0.17515839309350342
+          0.23244584340270652,
+          0.2109814218771965,
+          0.20464223698945536,
+          0.20165650936874988,
+          0.19862472136722145,
+          0.1939108544759529,
+          0.18532521422788295,
+          0.1799561058588941,
+          0.1773450683799303,
+          0.17696065264785504
          ],
          "xaxis": "x2",
          "y": [
@@ -17605,10 +17613,10 @@
           "to",
           ".",
           "a",
+          "so",
+          "with",
           "gunning_fog_index",
-          "flesch_kincaid_grade_level",
-          "has",
-          "and"
+          "flesch_kincaid_grade_level"
          ],
          "yaxis": "y2"
         }
@@ -17620,7 +17628,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Top Features for PC1[0.18]",
+          "text": "Top Features for PC1[0.17]",
           "x": 0.1875,
           "xanchor": "center",
           "xref": "paper",
@@ -18469,8 +18477,8 @@
           0.375
          ],
          "range": [
-          0.1690099053055776,
-          0.19615806466238006
+          0.1730579319711414,
+          0.20026590111272238
          ],
          "title": {
           "text": "Importance"
@@ -18483,8 +18491,8 @@
           1
          ],
          "range": [
-          0.17515839309350342,
-          0.2378133704888014
+          0.17696065264785504,
+          0.23244584340270652
          ]
         },
         "yaxis": {
@@ -18519,7 +18527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -18537,7 +18545,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x27399f0b260>"
+       "<IPython.lib.display.IFrame at 0x1dea13b5040>"
       ]
      },
      "metadata": {},
@@ -18557,7 +18565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18565,27 +18573,6 @@
     "    if os.path.exists(dump_session_filepath):\n",
     "        os.remove(dump_session_filepath)\n",
     "    dill.dump_session(dump_session_filepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'MetricsAnalysisVisualization' object has no attribute '_vv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mMetricsAnalysisVisualization\u001b[49m\u001b[43m(\u001b[49m\u001b[43msettings\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_vv\u001b[49m(pca_analysis_results\u001b[38;5;241m=\u001b[39mpca_analysis_results)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'MetricsAnalysisVisualization' object has no attribute '_vv'"
-     ]
-    }
-   ],
-   "source": [
-    "MetricsAnalysisVisualization(settings)._vv(pca_analysis_results=pca_analysis_results)"
    ]
   }
  ],
