Use single set of features for each analysis

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_session = True\n",
+    "load_session = False\n",
     "dump_session_filepath = 'res/sessions/analysis.db'\n",
     "if load_session:\n",
     "    dill.load_session(dump_session_filepath)"
@@ -627,6 +627,18 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_extractor = FeatureExtractor(\n",
+    "    settings=settings,\n",
+    "    metrics_analysis_results=metrics_analysis_results\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -17487,17 +17499,43 @@
     }
    ],
    "source": [
-    "metrics_analysis_visualization =  MetricsAnalysisVisualization(settings=settings, metrics_analysis_results=metrics_analysis_results)\n",
+    "metrics_analysis_visualization =  MetricsAnalysisVisualization(\n",
+    "    settings=settings, \n",
+    "    metrics_analysis_results=metrics_analysis_results,\n",
+    "    feature_extractor=feature_extractor\n",
+    ")\n",
     "metrics_analysis_visualization.visualize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"800\"\n",
+       "            src=\"http://127.0.0.1:8000/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x13397e946b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "metrics_analysis_visualization.dash_app.run(port=8001)"
+    "metrics_analysis_visualization.dash_app.run(port=8000)"
    ]
   },
   {
@@ -17506,7 +17544,7 @@
    "source": [
     "### PCA\n",
     "\n",
-    "Extracted features are used as an input for PCA. Among general features and 32 punctuation characters there are 72 most popular function words out of 512. It creates a dataset of chunks with 118 features. Using PCA we reduce it to 2 dimensions. Different PCAs are performed:\n",
+    "Extracted features are used as an input for PCA. Among general features and 12 out of 32 punctuation characters there are 25 most popular function words out of 512. It creates a dataset of chunks with 46 features. Using PCA we reduce it to 2 dimensions. Different PCAs are performed:\n",
     "\n",
     "- **All chunks** analyses all chunks available together\n",
     "- **Chunks per author** there are 10 separate PCAs, which only include the chunks of a specific author\n",
@@ -17515,7 +17553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -17528,7 +17566,10 @@
    ],
    "source": [
     "print(f\"Performing pca analysises for given metrics data...\")\n",
-    "pca_analysis_results = PCAAnalysis(settings).get_pca_analysis(metrics_analysis_results=metrics_analysis_results)"
+    "pca_analysis_results = PCAAnalysis(\n",
+    "    settings=settings,\n",
+    "    feature_extractor=feature_extractor\n",
+    ").get_pca_analysis(metrics_analysis_results=metrics_analysis_results)"
    ]
   },
   {
@@ -17542,7 +17583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -17556,33 +17597,33 @@
          "marker": {
           "color": "skyblue"
          },
-         "name": "Top Features for PC1[0.17]",
+         "name": "Top Features for PC1[0.33]",
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.20026590111272238,
-          0.1903362045225643,
-          0.1898695409518489,
-          0.18832112045145674,
-          0.1868133841571334,
-          0.18586446482310448,
-          0.17780188018376136,
-          0.17494083395038051,
-          0.17359817169277258,
-          0.1730579319711414
+          0.22422036874952916,
+          0.22303624483834802,
+          0.21500818791009182,
+          0.2127448945425121,
+          0.21137576330976116,
+          0.21017564504264294,
+          0.209940056621154,
+          0.20987570654751325,
+          0.19935315370719214,
+          0.19441807287405408
          ],
          "xaxis": "x",
          "y": [
           "of",
-          "yules_characteristic_k",
           "flesch_reading_ease",
+          "yules_characteristic_k",
           "simpsons_index",
-          "average_syllables_per_word",
           "the",
+          "flesch_kincaid_grade_level",
+          "gunning_fog_index",
+          "average_syllables_per_word",
           "average_word_length",
-          "he",
-          "said",
-          "gunning_fog_index"
+          "said"
          ],
          "yaxis": "y"
         },
@@ -17590,31 +17631,31 @@
          "marker": {
           "color": "skyblue"
          },
-         "name": "Top Features for PC2[0.07]",
+         "name": "Top Features for PC2[0.10]",
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.23244584340270652,
-          0.2109814218771965,
-          0.20464223698945536,
-          0.20165650936874988,
-          0.19862472136722145,
-          0.1939108544759529,
-          0.18532521422788295,
-          0.1799561058588941,
-          0.1773450683799303,
-          0.17696065264785504
+          0.3186826102768957,
+          0.2842714415339207,
+          0.26308096654240937,
+          0.2586668526895389,
+          0.252989636510926,
+          0.23842550513613878,
+          0.23030913159380345,
+          0.22654450826620356,
+          0.21173178519319918,
+          0.21164071901477288
          ],
          "xaxis": "x2",
          "y": [
-          "average_sentence_length",
-          "that",
-          "have",
-          "to",
-          ".",
+          ",",
           "a",
-          "so",
-          "with",
+          "and",
+          "to",
+          "in",
+          "as",
+          "unique_word_count",
+          "average_sentence_length",
           "gunning_fog_index",
           "flesch_kincaid_grade_level"
          ],
@@ -17628,7 +17669,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Top Features for PC1[0.17]",
+          "text": "Top Features for PC1[0.33]",
           "x": 0.1875,
           "xanchor": "center",
           "xref": "paper",
@@ -17641,7 +17682,7 @@
            "size": 16
           },
           "showarrow": false,
-          "text": "Top Features for PC2[0.07]",
+          "text": "Top Features for PC2[0.10]",
           "x": 0.8125,
           "xanchor": "center",
           "xref": "paper",
@@ -18477,8 +18518,8 @@
           0.375
          ],
          "range": [
-          0.1730579319711414,
-          0.20026590111272238
+          0.19441807287405408,
+          0.22422036874952916
          ],
          "title": {
           "text": "Importance"
@@ -18491,8 +18532,8 @@
           1
          ],
          "range": [
-          0.17696065264785504,
-          0.23244584340270652
+          0.21164071901477288,
+          0.3186826102768957
          ]
         },
         "yaxis": {
@@ -18527,7 +18568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -18537,7 +18578,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"800\"\n",
-       "            src=\"http://127.0.0.1:8000/\"\n",
+       "            src=\"http://127.0.0.1:8001/\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -18545,7 +18586,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1dea13b5040>"
+       "<IPython.lib.display.IFrame at 0x1339b4c6960>"
       ]
      },
      "metadata": {},
@@ -18553,7 +18594,7 @@
     }
    ],
    "source": [
-    "PCAAnalysisVisualization(pca_analysis_results=pca_analysis_results).dash_app.run(port=8000)"
+    "PCAAnalysisVisualization(pca_analysis_results=pca_analysis_results).dash_app.run(port=8001)"
    ]
   },
   {
@@ -18565,14 +18606,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not load_session:\n",
     "    if os.path.exists(dump_session_filepath):\n",
     "        os.remove(dump_session_filepath)\n",
-    "    dill.dump_session(dump_session_filepath)"
+    "    with open(dump_session_filepath, 'wb') as file:\n",
+    "        dill.dump(\n",
+    "            obj={\n",
+    "                \"pca_analysis_results\": pca_analysis_results\n",
+    "            },  \n",
+    "            file=file\n",
+    "        )"
    ]
   }
  ],
