Rename classification models

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -449,7 +449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_session = False\n",
+    "load_session = True\n",
     "dump_session_filepath = 'res/sessions/analysis.db'\n",
     "if load_session:\n",
     "    dill.load_session(dump_session_filepath)"
