Visualize feature distribution

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -452,7 +452,13 @@
     "load_session = True\n",
     "dump_session_filepath = 'res/sessions/analysis.db'\n",
     "if load_session:\n",
-    "    dill.load_session(dump_session_filepath)"
+    "    with open(dump_session_filepath, 'rb') as file:\n",
+    "        dump_dict = dill.load(file)\n",
+    "    \n",
+    "    preprocessing_results = dump_dict['preprocessing_results']\n",
+    "    metrics_analysis_results = dump_dict['metrics_analysis_results']\n",
+    "    feature_extractor = dump_dict['feature_extractor']\n",
+    "    pca_analysis_results = dump_dict['pca_analysis_results']"
    ]
   },
   {
@@ -638,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -17509,7 +17515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -17527,11 +17533,113 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x13397e946b0>"
+       "<IPython.lib.display.IFrame at 0x153a28c63f0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n",
+      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in scalar divide\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -17601,16 +17709,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.22422036874952916,
+          0.22422036874952914,
           0.22303624483834802,
           0.21500818791009182,
-          0.2127448945425121,
+          0.2127448945425122,
           0.21137576330976116,
-          0.21017564504264294,
-          0.209940056621154,
-          0.20987570654751325,
-          0.19935315370719214,
-          0.19441807287405408
+          0.21017564504264297,
+          0.20994005662115403,
+          0.2098757065475133,
+          0.19935315370719203,
+          0.19441807287405402
          ],
          "xaxis": "x",
          "y": [
@@ -17635,16 +17743,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.3186826102768957,
-          0.2842714415339207,
-          0.26308096654240937,
-          0.2586668526895389,
-          0.252989636510926,
-          0.23842550513613878,
-          0.23030913159380345,
-          0.22654450826620356,
-          0.21173178519319918,
-          0.21164071901477288
+          0.3186826102768956,
+          0.28427144153392125,
+          0.26308096654241,
+          0.25866685268953965,
+          0.2529896365109262,
+          0.23842550513613922,
+          0.23030913159380115,
+          0.2265445082662048,
+          0.21173178519319968,
+          0.21164071901477327
          ],
          "xaxis": "x2",
          "y": [
@@ -18518,8 +18626,8 @@
           0.375
          ],
          "range": [
-          0.19441807287405408,
-          0.22422036874952916
+          0.19441807287405402,
+          0.22422036874952914
          ],
          "title": {
           "text": "Importance"
@@ -18532,8 +18640,8 @@
           1
          ],
          "range": [
-          0.21164071901477288,
-          0.3186826102768957
+          0.21164071901477327,
+          0.3186826102768956
          ]
         },
         "yaxis": {
@@ -18568,7 +18676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -18586,7 +18694,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1339b4c6960>"
+       "<IPython.lib.display.IFrame at 0x153a28c63f0>"
       ]
      },
      "metadata": {},
@@ -18606,7 +18714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18616,7 +18724,10 @@
     "    with open(dump_session_filepath, 'wb') as file:\n",
     "        dill.dump(\n",
     "            obj={\n",
-    "                \"pca_analysis_results\": pca_analysis_results\n",
+    "                \"preprocessing_results\": preprocessing_results,\n",
+    "                \"metrics_analysis_results\": metrics_analysis_results,\n",
+    "                \"feature_extractor\": feature_extractor,\n",
+    "                \"pca_analysis_results\": pca_analysis_results,\n",
     "            },  \n",
     "            file=file\n",
     "        )"
