--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_session = True\n",
+    "load_session = False\n",
     "dump_session_filepath = 'res/sessions/analysis.db'\n",
     "if load_session:\n",
     "    with open(dump_session_filepath, 'rb') as file:\n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -17515,7 +17515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -17533,113 +17533,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x153a28c63f0>"
+       "<IPython.lib.display.IFrame at 0x2353f1c06e0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n",
-      "c:\\Projects\\Thesis\\src\\analysis\\visualization\\metrics_analysis_visualization.py:171: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in scalar divide\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -17661,7 +17559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -17691,7 +17589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -17709,16 +17607,16 @@
          "orientation": "h",
          "type": "bar",
          "x": [
-          0.22422036874952914,
-          0.22303624483834802,
-          0.21500818791009182,
-          0.2127448945425122,
-          0.21137576330976116,
-          0.21017564504264297,
-          0.20994005662115403,
-          0.2098757065475133,
-          0.19935315370719203,
-          0.19441807287405402
+          0.22422036874952905,
+          0.22303624483834794,
+          0.2150081879100917,
+          0.21274489454251208,
+          0.21137576330976107,
+          0.21017564504264288,
+          0.20994005662115392,
+          0.20987570654751322,
+          0.19935315370719214,
+          0.194418072874054
          ],
          "xaxis": "x",
          "y": [
@@ -17744,15 +17642,15 @@
          "type": "bar",
          "x": [
           0.3186826102768956,
-          0.28427144153392125,
-          0.26308096654241,
-          0.25866685268953965,
-          0.2529896365109262,
-          0.23842550513613922,
-          0.23030913159380115,
-          0.2265445082662048,
-          0.21173178519319968,
-          0.21164071901477327
+          0.28427144153392064,
+          0.2630809665424094,
+          0.25866685268953904,
+          0.2529896365109261,
+          0.23842550513613878,
+          0.230309131593803,
+          0.22654450826620362,
+          0.21173178519319924,
+          0.21164071901477308
          ],
          "xaxis": "x2",
          "y": [
@@ -18626,8 +18524,8 @@
           0.375
          ],
          "range": [
-          0.19441807287405402,
-          0.22422036874952914
+          0.194418072874054,
+          0.22422036874952905
          ],
          "title": {
           "text": "Importance"
@@ -18640,7 +18538,7 @@
           1
          ],
          "range": [
-          0.21164071901477327,
+          0.21164071901477308,
           0.3186826102768956
          ]
         },
@@ -18676,7 +18574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -18694,7 +18592,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x153a28c63f0>"
+       "<IPython.lib.display.IFrame at 0x234b60d54c0>"
       ]
      },
      "metadata": {},
@@ -18714,7 +18612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
