Move DaigtText to texts

--- a/daigt_dataset.ipynb
+++ b/daigt_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -18,13 +18,12 @@
     "%load_ext autoreload   \n",
     "%autoreload 2\n",
     "\n",
-    "from src import *\n",
-    "import pandas as pd"
+    "from src import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,25 +32,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = DaigtDataset(settings)\n",
-    "dataset.load()\n",
+    "dataset.load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset.clean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text removed while cleaning: 0.012064576572605812%.\n"
+      "Text removed while cleaning: 0.012379704917830402%.\n"
      ]
     }
    ],
