--- a/writing_style_analysis.ipynb
+++ b/writing_style_analysis.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pass"
+    "preprocessing_results = WritingStylePreprocessing(settings).preprocess(dataset)"
    ]
   }
  ],
